# network-monitor

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  447c78426975_add_interface_rate_metrics.py
eve-ng/hosts/: README.md
eve-ng/hosts/traffic-scripts/: host_setup.sh  http_traffic.sh  iperf_traffic.sh  run_all_traffic.sh  traffic_gen.sh
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AlertCard.jsx  DeviceCard.jsx  Layout.jsx  StatsCard.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: Alerts.jsx  Configs.jsx  Dashboard.jsx  DeviceDetail.jsx  Devices.jsx  Login.jsx  Metrics.jsx  Remediation.jsx  Tests.jsx  Topology.jsx
frontend/src/services/: api.js
scripts/: import_euniv_devices.py  init_db.py  populate_netbox.py  test_interface_down.py
src/: __init__.py  config.py  main.py
src/api/: alerts.py  auth.py  configs.py  devices.py  metrics.py  remediation.py  tests.py  websocket.py
src/cli/: commands.py
src/core/: __init__.py  health_checks.py
src/drivers/: __init__.py  base.py  netconf_driver.py  pyats_driver.py  snmp_driver.py  ssh_driver.py
src/integrations/: netbox.py
src/models/: __init__.py  alert.py  base.py  config_backup.py  device.py  metric.py  remediation_log.py  user.py
src/remediation/: __init__.py
src/schemas/: __init__.py  alert.py  config_backup.py  device.py  metric.py  user.py
src/tasks/: __init__.py  config_backup.py  network_tests.py  polling.py  remediation.py  routing.py
src/tests/: __init__.py  network_validation.py
tests/: __init__.py
(+2 files in other folders)
